<?xml version="1.0"?>
<package format="2">
    <name>pcl_plugin</name>
    <version>1.0.0</version>
    <description>pcl_plugin</description>
    <maintainer email="pat@marion.com">Pat Marion</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>pcl_ros</depend>
</package>
